<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    tools:context=".RegistrarCosechaDia">

    <TextView
        android:id="@+id/txtAgregarCosecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtAgregarCosecha"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCuantosKilos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/txtCuantosKilos"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHoyEstamos" />

    <EditText
        android:id="@+id/txt_getkilos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/txtIngreseKg"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCuantosKilos" />

    <TextView
        android:id="@+id/txtIndiqueFruta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/txtindiqueFruta"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_getkilos" />

    <TextView
        android:id="@+id/txtHoyEstamos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txtHoyEs"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAgregarCosecha" />

    <TextView
        android:id="@+id/txtGananciaHoy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtGananciaProvista"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFrutas" />

    <TextView
        android:id="@+id/txtTotalHoy"
        android:layout_width="248dp"
        android:layout_height="57dp"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:isScrollContainer="false"
        android:keepScreenOn="false"
        android:linksClickable="false"
        android:longClickable="false"
        android:onClick="seleccionFruta"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:text="@string/txtGananciaHoy"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textIsSelectable="false"
        android:textSize="48sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGananciaHoy" />

    <Button
        android:id="@+id/btnGuardarCosechaHoy"
        android:layout_width="337dp"
        android:layout_height="75dp"
        android:layout_marginTop="38dp"
        android:onClick="Registrar"
        android:text="@string/btnGuardarCosecha"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalHoy"
        app:layout_constraintVertical_bias="0.01" />

    <Spinner
        android:id="@+id/spinnerFrutas"
        android:layout_width="373dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:background="#00BCD4"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIndiqueFruta" />
</androidx.constraintlayout.widget.ConstraintLayout>